Projeto::Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FUNCTION
    LBRACE
    NOT
    PROCEDURE
    RBRACE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM IDENTIFIER SEMICOLON vars command_list DOT
Rule 2     vars -> VAR var_declarations
Rule 3     vars -> empty
Rule 4     var_declarations -> var_declarations var_declaration
Rule 5     var_declarations -> var_declaration
Rule 6     var_declaration -> identifiers_list COLON type SEMICOLON
Rule 7     identifiers_list -> identifiers_list COMMA IDENTIFIER
Rule 8     identifiers_list -> IDENTIFIER
Rule 9     type -> simple_type
Rule 10    type -> array_type
Rule 11    simple_type -> INTEGER
Rule 12    simple_type -> REAL
Rule 13    simple_type -> STRING
Rule 14    simple_type -> CHAR
Rule 15    simple_type -> BOOLEAN
Rule 16    array_type -> ARRAY LBRACKET range RBRACKET OF simple_type
Rule 17    range -> INT_LIT DOTDOT INT_LIT
Rule 18    command_list -> BEGIN command_list_opt END
Rule 19    command_list -> command
Rule 20    command_list_opt -> command_list_body
Rule 21    command_list_opt -> command_list_body SEMICOLON
Rule 22    command_list_body -> command_list_body SEMICOLON command
Rule 23    command_list_body -> command
Rule 24    command -> function_call
Rule 25    command -> assignment
Rule 26    command -> if
Rule 27    command -> while
Rule 28    command -> for
Rule 29    function_call -> IDENTIFIER LPAREN args_list RPAREN
Rule 30    args_list -> args_list COMMA expression
Rule 31    args_list -> expression
Rule 32    args_list -> empty
Rule 33    argument -> literal
Rule 34    argument -> var
Rule 35    literal -> STRING_LIT
Rule 36    literal -> CHAR_LIT
Rule 37    literal -> INT_LIT
Rule 38    literal -> REAL_LIT
Rule 39    literal -> TRUE
Rule 40    literal -> FALSE
Rule 41    var -> IDENTIFIER
Rule 42    var -> IDENTIFIER LBRACKET expression RBRACKET
Rule 43    if -> IF expressionBool THEN command_list else
Rule 44    else -> ELSE command_list
Rule 45    else -> empty
Rule 46    while -> WHILE expressionBool DO command_list
Rule 47    for -> FOR IDENTIFIER ASSIGN expression to_or_downto expression DO command_list
Rule 48    to_or_downto -> TO
Rule 49    to_or_downto -> DOWNTO
Rule 50    expressionBool -> expression
Rule 51    expressionBool -> expression opRel expression
Rule 52    opRel -> EQUAL
Rule 53    opRel -> NOTEQUAL
Rule 54    opRel -> LESS
Rule 55    opRel -> LESSEQUAL
Rule 56    opRel -> GREATER
Rule 57    opRel -> GREATEREQUAL
Rule 58    expression -> term
Rule 59    expression -> expression opAd term
Rule 60    term -> factor
Rule 61    term -> term opMul factor
Rule 62    opAd -> PLUS
Rule 63    opAd -> MINUS
Rule 64    opAd -> AND
Rule 65    opMul -> TIMES
Rule 66    opMul -> DIVIDE
Rule 67    opMul -> DIV
Rule 68    opMul -> MOD
Rule 69    opMul -> OR
Rule 70    factor -> argument
Rule 71    factor -> LPAREN expressionBool RPAREN
Rule 72    factor -> function_call
Rule 73    assignment -> IDENTIFIER ASSIGN expression
Rule 74    assignment -> IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression
Rule 75    empty -> <empty>

Terminals, with rules where they appear

AND                  : 64
ARRAY                : 16
ASSIGN               : 47 73 74
BEGIN                : 18
BOOLEAN              : 15
CHAR                 : 14
CHAR_LIT             : 36
COLON                : 6
COMMA                : 7 30
DIV                  : 67
DIVIDE               : 66
DO                   : 46 47
DOT                  : 1
DOTDOT               : 17
DOWNTO               : 49
ELSE                 : 44
END                  : 18
EQUAL                : 52
FALSE                : 40
FOR                  : 47
FUNCTION             : 
GREATER              : 56
GREATEREQUAL         : 57
IDENTIFIER           : 1 7 8 29 41 42 47 73 74
IF                   : 43
INTEGER              : 11
INT_LIT              : 17 17 37
LBRACE               : 
LBRACKET             : 16 42 74
LESS                 : 54
LESSEQUAL            : 55
LPAREN               : 29 71
MINUS                : 63
MOD                  : 68
NOT                  : 
NOTEQUAL             : 53
OF                   : 16
OR                   : 69
PLUS                 : 62
PROCEDURE            : 
PROGRAM              : 1
RBRACE               : 
RBRACKET             : 16 42 74
REAL                 : 12
REAL_LIT             : 38
RPAREN               : 29 71
SEMICOLON            : 1 6 21 22
STRING               : 13
STRING_LIT           : 35
THEN                 : 43
TIMES                : 65
TO                   : 48
TRUE                 : 39
VAR                  : 2
WHILE                : 46
error                : 

Nonterminals, with rules where they appear

args_list            : 29 30
argument             : 70
array_type           : 10
assignment           : 25
command              : 19 22 23
command_list         : 1 43 44 46 47
command_list_body    : 20 21 22
command_list_opt     : 18
else                 : 43
empty                : 3 32 45
expression           : 30 31 42 47 47 50 51 51 59 73 74 74
expressionBool       : 43 46 71
factor               : 60 61
for                  : 28
function_call        : 24 72
identifiers_list     : 6 7
if                   : 26
literal              : 33
opAd                 : 59
opMul                : 61
opRel                : 51
program              : 0
range                : 16
simple_type          : 9 16
term                 : 58 59 61
to_or_downto         : 47
type                 : 6
var                  : 34
var_declaration      : 4 5
var_declarations     : 2 4
vars                 : 1
while                : 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM IDENTIFIER SEMICOLON vars command_list DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . IDENTIFIER SEMICOLON vars command_list DOT

    IDENTIFIER      shift and go to state 3


state 3

    (1) program -> PROGRAM IDENTIFIER . SEMICOLON vars command_list DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM IDENTIFIER SEMICOLON . vars command_list DOT
    (2) vars -> . VAR var_declarations
    (3) vars -> . empty
    (75) empty -> .

    VAR             shift and go to state 6
    BEGIN           reduce using rule 75 (empty -> .)
    IDENTIFIER      reduce using rule 75 (empty -> .)
    IF              reduce using rule 75 (empty -> .)
    WHILE           reduce using rule 75 (empty -> .)
    FOR             reduce using rule 75 (empty -> .)

    vars                           shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM IDENTIFIER SEMICOLON vars . command_list DOT
    (18) command_list -> . BEGIN command_list_opt END
    (19) command_list -> . command
    (24) command -> . function_call
    (25) command -> . assignment
    (26) command -> . if
    (27) command -> . while
    (28) command -> . for
    (29) function_call -> . IDENTIFIER LPAREN args_list RPAREN
    (73) assignment -> . IDENTIFIER ASSIGN expression
    (74) assignment -> . IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression
    (43) if -> . IF expressionBool THEN command_list else
    (46) while -> . WHILE expressionBool DO command_list
    (47) for -> . FOR IDENTIFIER ASSIGN expression to_or_downto expression DO command_list

    BEGIN           shift and go to state 10
    IDENTIFIER      shift and go to state 8
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19

    command_list                   shift and go to state 9
    command                        shift and go to state 11
    function_call                  shift and go to state 12
    assignment                     shift and go to state 13
    if                             shift and go to state 14
    while                          shift and go to state 15
    for                            shift and go to state 16

state 6

    (2) vars -> VAR . var_declarations
    (4) var_declarations -> . var_declarations var_declaration
    (5) var_declarations -> . var_declaration
    (6) var_declaration -> . identifiers_list COLON type SEMICOLON
    (7) identifiers_list -> . identifiers_list COMMA IDENTIFIER
    (8) identifiers_list -> . IDENTIFIER

    IDENTIFIER      shift and go to state 23

    var_declarations               shift and go to state 20
    var_declaration                shift and go to state 21
    identifiers_list               shift and go to state 22

state 7

    (3) vars -> empty .

    BEGIN           reduce using rule 3 (vars -> empty .)
    IDENTIFIER      reduce using rule 3 (vars -> empty .)
    IF              reduce using rule 3 (vars -> empty .)
    WHILE           reduce using rule 3 (vars -> empty .)
    FOR             reduce using rule 3 (vars -> empty .)


state 8

    (29) function_call -> IDENTIFIER . LPAREN args_list RPAREN
    (73) assignment -> IDENTIFIER . ASSIGN expression
    (74) assignment -> IDENTIFIER . LBRACKET expression RBRACKET ASSIGN expression

    LPAREN          shift and go to state 24
    ASSIGN          shift and go to state 25
    LBRACKET        shift and go to state 26


state 9

    (1) program -> PROGRAM IDENTIFIER SEMICOLON vars command_list . DOT

    DOT             shift and go to state 27


state 10

    (18) command_list -> BEGIN . command_list_opt END
    (20) command_list_opt -> . command_list_body
    (21) command_list_opt -> . command_list_body SEMICOLON
    (22) command_list_body -> . command_list_body SEMICOLON command
    (23) command_list_body -> . command
    (24) command -> . function_call
    (25) command -> . assignment
    (26) command -> . if
    (27) command -> . while
    (28) command -> . for
    (29) function_call -> . IDENTIFIER LPAREN args_list RPAREN
    (73) assignment -> . IDENTIFIER ASSIGN expression
    (74) assignment -> . IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression
    (43) if -> . IF expressionBool THEN command_list else
    (46) while -> . WHILE expressionBool DO command_list
    (47) for -> . FOR IDENTIFIER ASSIGN expression to_or_downto expression DO command_list

    IDENTIFIER      shift and go to state 8
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19

    command_list_opt               shift and go to state 28
    command_list_body              shift and go to state 29
    command                        shift and go to state 30
    function_call                  shift and go to state 12
    assignment                     shift and go to state 13
    if                             shift and go to state 14
    while                          shift and go to state 15
    for                            shift and go to state 16

state 11

    (19) command_list -> command .

    DOT             reduce using rule 19 (command_list -> command .)
    ELSE            reduce using rule 19 (command_list -> command .)
    SEMICOLON       reduce using rule 19 (command_list -> command .)
    END             reduce using rule 19 (command_list -> command .)


state 12

    (24) command -> function_call .

    DOT             reduce using rule 24 (command -> function_call .)
    SEMICOLON       reduce using rule 24 (command -> function_call .)
    END             reduce using rule 24 (command -> function_call .)
    ELSE            reduce using rule 24 (command -> function_call .)


state 13

    (25) command -> assignment .

    DOT             reduce using rule 25 (command -> assignment .)
    SEMICOLON       reduce using rule 25 (command -> assignment .)
    END             reduce using rule 25 (command -> assignment .)
    ELSE            reduce using rule 25 (command -> assignment .)


state 14

    (26) command -> if .

    DOT             reduce using rule 26 (command -> if .)
    SEMICOLON       reduce using rule 26 (command -> if .)
    END             reduce using rule 26 (command -> if .)
    ELSE            reduce using rule 26 (command -> if .)


state 15

    (27) command -> while .

    DOT             reduce using rule 27 (command -> while .)
    SEMICOLON       reduce using rule 27 (command -> while .)
    END             reduce using rule 27 (command -> while .)
    ELSE            reduce using rule 27 (command -> while .)


state 16

    (28) command -> for .

    DOT             reduce using rule 28 (command -> for .)
    SEMICOLON       reduce using rule 28 (command -> for .)
    END             reduce using rule 28 (command -> for .)
    ELSE            reduce using rule 28 (command -> for .)


state 17

    (43) if -> IF . expressionBool THEN command_list else
    (50) expressionBool -> . expression
    (51) expressionBool -> . expression opRel expression
    (58) expression -> . term
    (59) expression -> . expression opAd term
    (60) term -> . factor
    (61) term -> . term opMul factor
    (70) factor -> . argument
    (71) factor -> . LPAREN expressionBool RPAREN
    (72) factor -> . function_call
    (33) argument -> . literal
    (34) argument -> . var
    (29) function_call -> . IDENTIFIER LPAREN args_list RPAREN
    (35) literal -> . STRING_LIT
    (36) literal -> . CHAR_LIT
    (37) literal -> . INT_LIT
    (38) literal -> . REAL_LIT
    (39) literal -> . TRUE
    (40) literal -> . FALSE
    (41) var -> . IDENTIFIER
    (42) var -> . IDENTIFIER LBRACKET expression RBRACKET

    LPAREN          shift and go to state 36
    IDENTIFIER      shift and go to state 40
    STRING_LIT      shift and go to state 41
    CHAR_LIT        shift and go to state 42
    INT_LIT         shift and go to state 43
    REAL_LIT        shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expressionBool                 shift and go to state 31
    expression                     shift and go to state 32
    term                           shift and go to state 33
    factor                         shift and go to state 34
    argument                       shift and go to state 35
    function_call                  shift and go to state 37
    literal                        shift and go to state 38
    var                            shift and go to state 39

state 18

    (46) while -> WHILE . expressionBool DO command_list
    (50) expressionBool -> . expression
    (51) expressionBool -> . expression opRel expression
    (58) expression -> . term
    (59) expression -> . expression opAd term
    (60) term -> . factor
    (61) term -> . term opMul factor
    (70) factor -> . argument
    (71) factor -> . LPAREN expressionBool RPAREN
    (72) factor -> . function_call
    (33) argument -> . literal
    (34) argument -> . var
    (29) function_call -> . IDENTIFIER LPAREN args_list RPAREN
    (35) literal -> . STRING_LIT
    (36) literal -> . CHAR_LIT
    (37) literal -> . INT_LIT
    (38) literal -> . REAL_LIT
    (39) literal -> . TRUE
    (40) literal -> . FALSE
    (41) var -> . IDENTIFIER
    (42) var -> . IDENTIFIER LBRACKET expression RBRACKET

    LPAREN          shift and go to state 36
    IDENTIFIER      shift and go to state 40
    STRING_LIT      shift and go to state 41
    CHAR_LIT        shift and go to state 42
    INT_LIT         shift and go to state 43
    REAL_LIT        shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expressionBool                 shift and go to state 47
    expression                     shift and go to state 32
    term                           shift and go to state 33
    factor                         shift and go to state 34
    argument                       shift and go to state 35
    function_call                  shift and go to state 37
    literal                        shift and go to state 38
    var                            shift and go to state 39

state 19

    (47) for -> FOR . IDENTIFIER ASSIGN expression to_or_downto expression DO command_list

    IDENTIFIER      shift and go to state 48


state 20

    (2) vars -> VAR var_declarations .
    (4) var_declarations -> var_declarations . var_declaration
    (6) var_declaration -> . identifiers_list COLON type SEMICOLON
    (7) identifiers_list -> . identifiers_list COMMA IDENTIFIER
    (8) identifiers_list -> . IDENTIFIER

  ! shift/reduce conflict for IDENTIFIER resolved as shift
    BEGIN           reduce using rule 2 (vars -> VAR var_declarations .)
    IF              reduce using rule 2 (vars -> VAR var_declarations .)
    WHILE           reduce using rule 2 (vars -> VAR var_declarations .)
    FOR             reduce using rule 2 (vars -> VAR var_declarations .)
    IDENTIFIER      shift and go to state 23

  ! IDENTIFIER      [ reduce using rule 2 (vars -> VAR var_declarations .) ]

    var_declaration                shift and go to state 49
    identifiers_list               shift and go to state 22

state 21

    (5) var_declarations -> var_declaration .

    IDENTIFIER      reduce using rule 5 (var_declarations -> var_declaration .)
    BEGIN           reduce using rule 5 (var_declarations -> var_declaration .)
    IF              reduce using rule 5 (var_declarations -> var_declaration .)
    WHILE           reduce using rule 5 (var_declarations -> var_declaration .)
    FOR             reduce using rule 5 (var_declarations -> var_declaration .)


state 22

    (6) var_declaration -> identifiers_list . COLON type SEMICOLON
    (7) identifiers_list -> identifiers_list . COMMA IDENTIFIER

    COLON           shift and go to state 50
    COMMA           shift and go to state 51


state 23

    (8) identifiers_list -> IDENTIFIER .

    COLON           reduce using rule 8 (identifiers_list -> IDENTIFIER .)
    COMMA           reduce using rule 8 (identifiers_list -> IDENTIFIER .)


state 24

    (29) function_call -> IDENTIFIER LPAREN . args_list RPAREN
    (30) args_list -> . args_list COMMA expression
    (31) args_list -> . expression
    (32) args_list -> . empty
    (58) expression -> . term
    (59) expression -> . expression opAd term
    (75) empty -> .
    (60) term -> . factor
    (61) term -> . term opMul factor
    (70) factor -> . argument
    (71) factor -> . LPAREN expressionBool RPAREN
    (72) factor -> . function_call
    (33) argument -> . literal
    (34) argument -> . var
    (29) function_call -> . IDENTIFIER LPAREN args_list RPAREN
    (35) literal -> . STRING_LIT
    (36) literal -> . CHAR_LIT
    (37) literal -> . INT_LIT
    (38) literal -> . REAL_LIT
    (39) literal -> . TRUE
    (40) literal -> . FALSE
    (41) var -> . IDENTIFIER
    (42) var -> . IDENTIFIER LBRACKET expression RBRACKET

    RPAREN          reduce using rule 75 (empty -> .)
    COMMA           reduce using rule 75 (empty -> .)
    LPAREN          shift and go to state 36
    IDENTIFIER      shift and go to state 40
    STRING_LIT      shift and go to state 41
    CHAR_LIT        shift and go to state 42
    INT_LIT         shift and go to state 43
    REAL_LIT        shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    args_list                      shift and go to state 52
    expression                     shift and go to state 53
    empty                          shift and go to state 54
    term                           shift and go to state 33
    factor                         shift and go to state 34
    argument                       shift and go to state 35
    function_call                  shift and go to state 37
    literal                        shift and go to state 38
    var                            shift and go to state 39

state 25

    (73) assignment -> IDENTIFIER ASSIGN . expression
    (58) expression -> . term
    (59) expression -> . expression opAd term
    (60) term -> . factor
    (61) term -> . term opMul factor
    (70) factor -> . argument
    (71) factor -> . LPAREN expressionBool RPAREN
    (72) factor -> . function_call
    (33) argument -> . literal
    (34) argument -> . var
    (29) function_call -> . IDENTIFIER LPAREN args_list RPAREN
    (35) literal -> . STRING_LIT
    (36) literal -> . CHAR_LIT
    (37) literal -> . INT_LIT
    (38) literal -> . REAL_LIT
    (39) literal -> . TRUE
    (40) literal -> . FALSE
    (41) var -> . IDENTIFIER
    (42) var -> . IDENTIFIER LBRACKET expression RBRACKET

    LPAREN          shift and go to state 36
    IDENTIFIER      shift and go to state 40
    STRING_LIT      shift and go to state 41
    CHAR_LIT        shift and go to state 42
    INT_LIT         shift and go to state 43
    REAL_LIT        shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expression                     shift and go to state 55
    term                           shift and go to state 33
    factor                         shift and go to state 34
    argument                       shift and go to state 35
    function_call                  shift and go to state 37
    literal                        shift and go to state 38
    var                            shift and go to state 39

state 26

    (74) assignment -> IDENTIFIER LBRACKET . expression RBRACKET ASSIGN expression
    (58) expression -> . term
    (59) expression -> . expression opAd term
    (60) term -> . factor
    (61) term -> . term opMul factor
    (70) factor -> . argument
    (71) factor -> . LPAREN expressionBool RPAREN
    (72) factor -> . function_call
    (33) argument -> . literal
    (34) argument -> . var
    (29) function_call -> . IDENTIFIER LPAREN args_list RPAREN
    (35) literal -> . STRING_LIT
    (36) literal -> . CHAR_LIT
    (37) literal -> . INT_LIT
    (38) literal -> . REAL_LIT
    (39) literal -> . TRUE
    (40) literal -> . FALSE
    (41) var -> . IDENTIFIER
    (42) var -> . IDENTIFIER LBRACKET expression RBRACKET

    LPAREN          shift and go to state 36
    IDENTIFIER      shift and go to state 40
    STRING_LIT      shift and go to state 41
    CHAR_LIT        shift and go to state 42
    INT_LIT         shift and go to state 43
    REAL_LIT        shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expression                     shift and go to state 56
    term                           shift and go to state 33
    factor                         shift and go to state 34
    argument                       shift and go to state 35
    function_call                  shift and go to state 37
    literal                        shift and go to state 38
    var                            shift and go to state 39

state 27

    (1) program -> PROGRAM IDENTIFIER SEMICOLON vars command_list DOT .

    $end            reduce using rule 1 (program -> PROGRAM IDENTIFIER SEMICOLON vars command_list DOT .)


state 28

    (18) command_list -> BEGIN command_list_opt . END

    END             shift and go to state 57


state 29

    (20) command_list_opt -> command_list_body .
    (21) command_list_opt -> command_list_body . SEMICOLON
    (22) command_list_body -> command_list_body . SEMICOLON command

    END             reduce using rule 20 (command_list_opt -> command_list_body .)
    SEMICOLON       shift and go to state 58


state 30

    (23) command_list_body -> command .

    SEMICOLON       reduce using rule 23 (command_list_body -> command .)
    END             reduce using rule 23 (command_list_body -> command .)


state 31

    (43) if -> IF expressionBool . THEN command_list else

    THEN            shift and go to state 59


state 32

    (50) expressionBool -> expression .
    (51) expressionBool -> expression . opRel expression
    (59) expression -> expression . opAd term
    (52) opRel -> . EQUAL
    (53) opRel -> . NOTEQUAL
    (54) opRel -> . LESS
    (55) opRel -> . LESSEQUAL
    (56) opRel -> . GREATER
    (57) opRel -> . GREATEREQUAL
    (62) opAd -> . PLUS
    (63) opAd -> . MINUS
    (64) opAd -> . AND

    THEN            reduce using rule 50 (expressionBool -> expression .)
    DO              reduce using rule 50 (expressionBool -> expression .)
    RPAREN          reduce using rule 50 (expressionBool -> expression .)
    EQUAL           shift and go to state 62
    NOTEQUAL        shift and go to state 63
    LESS            shift and go to state 64
    LESSEQUAL       shift and go to state 65
    GREATER         shift and go to state 66
    GREATEREQUAL    shift and go to state 67
    PLUS            shift and go to state 68
    MINUS           shift and go to state 69
    AND             shift and go to state 70

    opRel                          shift and go to state 60
    opAd                           shift and go to state 61

state 33

    (58) expression -> term .
    (61) term -> term . opMul factor
    (65) opMul -> . TIMES
    (66) opMul -> . DIVIDE
    (67) opMul -> . DIV
    (68) opMul -> . MOD
    (69) opMul -> . OR

    EQUAL           reduce using rule 58 (expression -> term .)
    NOTEQUAL        reduce using rule 58 (expression -> term .)
    LESS            reduce using rule 58 (expression -> term .)
    LESSEQUAL       reduce using rule 58 (expression -> term .)
    GREATER         reduce using rule 58 (expression -> term .)
    GREATEREQUAL    reduce using rule 58 (expression -> term .)
    PLUS            reduce using rule 58 (expression -> term .)
    MINUS           reduce using rule 58 (expression -> term .)
    AND             reduce using rule 58 (expression -> term .)
    THEN            reduce using rule 58 (expression -> term .)
    DO              reduce using rule 58 (expression -> term .)
    RPAREN          reduce using rule 58 (expression -> term .)
    COMMA           reduce using rule 58 (expression -> term .)
    DOT             reduce using rule 58 (expression -> term .)
    SEMICOLON       reduce using rule 58 (expression -> term .)
    END             reduce using rule 58 (expression -> term .)
    ELSE            reduce using rule 58 (expression -> term .)
    RBRACKET        reduce using rule 58 (expression -> term .)
    TO              reduce using rule 58 (expression -> term .)
    DOWNTO          reduce using rule 58 (expression -> term .)
    TIMES           shift and go to state 72
    DIVIDE          shift and go to state 73
    DIV             shift and go to state 74
    MOD             shift and go to state 75
    OR              shift and go to state 76

    opMul                          shift and go to state 71

state 34

    (60) term -> factor .

    TIMES           reduce using rule 60 (term -> factor .)
    DIVIDE          reduce using rule 60 (term -> factor .)
    DIV             reduce using rule 60 (term -> factor .)
    MOD             reduce using rule 60 (term -> factor .)
    OR              reduce using rule 60 (term -> factor .)
    EQUAL           reduce using rule 60 (term -> factor .)
    NOTEQUAL        reduce using rule 60 (term -> factor .)
    LESS            reduce using rule 60 (term -> factor .)
    LESSEQUAL       reduce using rule 60 (term -> factor .)
    GREATER         reduce using rule 60 (term -> factor .)
    GREATEREQUAL    reduce using rule 60 (term -> factor .)
    PLUS            reduce using rule 60 (term -> factor .)
    MINUS           reduce using rule 60 (term -> factor .)
    AND             reduce using rule 60 (term -> factor .)
    THEN            reduce using rule 60 (term -> factor .)
    DO              reduce using rule 60 (term -> factor .)
    RPAREN          reduce using rule 60 (term -> factor .)
    COMMA           reduce using rule 60 (term -> factor .)
    DOT             reduce using rule 60 (term -> factor .)
    SEMICOLON       reduce using rule 60 (term -> factor .)
    END             reduce using rule 60 (term -> factor .)
    ELSE            reduce using rule 60 (term -> factor .)
    RBRACKET        reduce using rule 60 (term -> factor .)
    TO              reduce using rule 60 (term -> factor .)
    DOWNTO          reduce using rule 60 (term -> factor .)


state 35

    (70) factor -> argument .

    TIMES           reduce using rule 70 (factor -> argument .)
    DIVIDE          reduce using rule 70 (factor -> argument .)
    DIV             reduce using rule 70 (factor -> argument .)
    MOD             reduce using rule 70 (factor -> argument .)
    OR              reduce using rule 70 (factor -> argument .)
    EQUAL           reduce using rule 70 (factor -> argument .)
    NOTEQUAL        reduce using rule 70 (factor -> argument .)
    LESS            reduce using rule 70 (factor -> argument .)
    LESSEQUAL       reduce using rule 70 (factor -> argument .)
    GREATER         reduce using rule 70 (factor -> argument .)
    GREATEREQUAL    reduce using rule 70 (factor -> argument .)
    PLUS            reduce using rule 70 (factor -> argument .)
    MINUS           reduce using rule 70 (factor -> argument .)
    AND             reduce using rule 70 (factor -> argument .)
    THEN            reduce using rule 70 (factor -> argument .)
    DO              reduce using rule 70 (factor -> argument .)
    RPAREN          reduce using rule 70 (factor -> argument .)
    COMMA           reduce using rule 70 (factor -> argument .)
    DOT             reduce using rule 70 (factor -> argument .)
    SEMICOLON       reduce using rule 70 (factor -> argument .)
    END             reduce using rule 70 (factor -> argument .)
    ELSE            reduce using rule 70 (factor -> argument .)
    RBRACKET        reduce using rule 70 (factor -> argument .)
    TO              reduce using rule 70 (factor -> argument .)
    DOWNTO          reduce using rule 70 (factor -> argument .)


state 36

    (71) factor -> LPAREN . expressionBool RPAREN
    (50) expressionBool -> . expression
    (51) expressionBool -> . expression opRel expression
    (58) expression -> . term
    (59) expression -> . expression opAd term
    (60) term -> . factor
    (61) term -> . term opMul factor
    (70) factor -> . argument
    (71) factor -> . LPAREN expressionBool RPAREN
    (72) factor -> . function_call
    (33) argument -> . literal
    (34) argument -> . var
    (29) function_call -> . IDENTIFIER LPAREN args_list RPAREN
    (35) literal -> . STRING_LIT
    (36) literal -> . CHAR_LIT
    (37) literal -> . INT_LIT
    (38) literal -> . REAL_LIT
    (39) literal -> . TRUE
    (40) literal -> . FALSE
    (41) var -> . IDENTIFIER
    (42) var -> . IDENTIFIER LBRACKET expression RBRACKET

    LPAREN          shift and go to state 36
    IDENTIFIER      shift and go to state 40
    STRING_LIT      shift and go to state 41
    CHAR_LIT        shift and go to state 42
    INT_LIT         shift and go to state 43
    REAL_LIT        shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expressionBool                 shift and go to state 77
    expression                     shift and go to state 32
    term                           shift and go to state 33
    factor                         shift and go to state 34
    argument                       shift and go to state 35
    function_call                  shift and go to state 37
    literal                        shift and go to state 38
    var                            shift and go to state 39

state 37

    (72) factor -> function_call .

    TIMES           reduce using rule 72 (factor -> function_call .)
    DIVIDE          reduce using rule 72 (factor -> function_call .)
    DIV             reduce using rule 72 (factor -> function_call .)
    MOD             reduce using rule 72 (factor -> function_call .)
    OR              reduce using rule 72 (factor -> function_call .)
    EQUAL           reduce using rule 72 (factor -> function_call .)
    NOTEQUAL        reduce using rule 72 (factor -> function_call .)
    LESS            reduce using rule 72 (factor -> function_call .)
    LESSEQUAL       reduce using rule 72 (factor -> function_call .)
    GREATER         reduce using rule 72 (factor -> function_call .)
    GREATEREQUAL    reduce using rule 72 (factor -> function_call .)
    PLUS            reduce using rule 72 (factor -> function_call .)
    MINUS           reduce using rule 72 (factor -> function_call .)
    AND             reduce using rule 72 (factor -> function_call .)
    THEN            reduce using rule 72 (factor -> function_call .)
    DO              reduce using rule 72 (factor -> function_call .)
    RPAREN          reduce using rule 72 (factor -> function_call .)
    COMMA           reduce using rule 72 (factor -> function_call .)
    DOT             reduce using rule 72 (factor -> function_call .)
    SEMICOLON       reduce using rule 72 (factor -> function_call .)
    END             reduce using rule 72 (factor -> function_call .)
    ELSE            reduce using rule 72 (factor -> function_call .)
    RBRACKET        reduce using rule 72 (factor -> function_call .)
    TO              reduce using rule 72 (factor -> function_call .)
    DOWNTO          reduce using rule 72 (factor -> function_call .)


state 38

    (33) argument -> literal .

    TIMES           reduce using rule 33 (argument -> literal .)
    DIVIDE          reduce using rule 33 (argument -> literal .)
    DIV             reduce using rule 33 (argument -> literal .)
    MOD             reduce using rule 33 (argument -> literal .)
    OR              reduce using rule 33 (argument -> literal .)
    EQUAL           reduce using rule 33 (argument -> literal .)
    NOTEQUAL        reduce using rule 33 (argument -> literal .)
    LESS            reduce using rule 33 (argument -> literal .)
    LESSEQUAL       reduce using rule 33 (argument -> literal .)
    GREATER         reduce using rule 33 (argument -> literal .)
    GREATEREQUAL    reduce using rule 33 (argument -> literal .)
    PLUS            reduce using rule 33 (argument -> literal .)
    MINUS           reduce using rule 33 (argument -> literal .)
    AND             reduce using rule 33 (argument -> literal .)
    THEN            reduce using rule 33 (argument -> literal .)
    DO              reduce using rule 33 (argument -> literal .)
    RPAREN          reduce using rule 33 (argument -> literal .)
    COMMA           reduce using rule 33 (argument -> literal .)
    DOT             reduce using rule 33 (argument -> literal .)
    SEMICOLON       reduce using rule 33 (argument -> literal .)
    END             reduce using rule 33 (argument -> literal .)
    ELSE            reduce using rule 33 (argument -> literal .)
    RBRACKET        reduce using rule 33 (argument -> literal .)
    TO              reduce using rule 33 (argument -> literal .)
    DOWNTO          reduce using rule 33 (argument -> literal .)


state 39

    (34) argument -> var .

    TIMES           reduce using rule 34 (argument -> var .)
    DIVIDE          reduce using rule 34 (argument -> var .)
    DIV             reduce using rule 34 (argument -> var .)
    MOD             reduce using rule 34 (argument -> var .)
    OR              reduce using rule 34 (argument -> var .)
    EQUAL           reduce using rule 34 (argument -> var .)
    NOTEQUAL        reduce using rule 34 (argument -> var .)
    LESS            reduce using rule 34 (argument -> var .)
    LESSEQUAL       reduce using rule 34 (argument -> var .)
    GREATER         reduce using rule 34 (argument -> var .)
    GREATEREQUAL    reduce using rule 34 (argument -> var .)
